change swager and routes
